Actualizacion RTC wake up

--- a/check_flujo/check_flujo.ioc
+++ b/check_flujo/check_flujo.ioc
@@ -1,20 +1,24 @@
 #MicroXplorer Configuration settings - do not modify
 File.Version=6
 KeepUserPlacement=false
+LPUART1.BaudRate=9600
+LPUART1.IPParameters=BaudRate,WordLength
+LPUART1.WordLength=UART_WORDLENGTH_8B
 Mcu.Family=STM32L0
 Mcu.IP0=ADC
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=RTC
-Mcu.IP4=SYS
-Mcu.IPNb=5
+Mcu.IP1=LPUART1
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=RTC
+Mcu.IP5=SYS
+Mcu.IPNb=6
 Mcu.Name=STM32L011K(3-4)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PA0-CK_IN
 Mcu.Pin1=PA1
 Mcu.Pin10=VP_RTC_VS_RTC_Activate
 Mcu.Pin11=VP_RTC_VS_RTC_Calendar
-Mcu.Pin12=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin12=VP_RTC_VS_RTC_WakeUp_intern
 Mcu.Pin13=VP_SYS_VS_Systick
 Mcu.Pin2=PA2
 Mcu.Pin3=PA3
@@ -50,6 +54,7 @@ PA1.Locked=true
 PA1.Mode=IN1
 PA1.Signal=ADC_IN1
 PA2.Locked=true
+PA2.Mode=Asynchronous
 PA2.Signal=LPUART1_TX
 PA3.GPIOParameters=GPIO_Label
 PA3.GPIO_Label=HALL_SENS_AN
@@ -62,15 +67,17 @@ PA4.GPIO_PuPd=GPIO_PULLUP
 PA4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA4.Locked=true
 PA4.Signal=GPIO_Output
-PA5.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
+PA5.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PA5.GPIO_Label=WAKE_DS_WISOL
+PA5.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PA5.GPIO_PuPd=GPIO_PULLUP
 PA5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA5.Locked=true
 PA5.PinState=GPIO_PIN_SET
 PA5.Signal=GPIO_Output
-PA6.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
+PA6.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PA6.GPIO_Label=RST_WISOL
+PA6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PA6.GPIO_PuPd=GPIO_PULLUP
 PA6.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA6.Locked=true
@@ -90,6 +97,7 @@ PB3.GPIO_PuPd=GPIO_PULLUP
 PB3.Locked=true
 PB3.Signal=GPIO_Output
 PB7.Locked=true
+PB7.Mode=Asynchronous
 PB7.Signal=LPUART1_RX
 PCC.Checker=true
 PCC.Line=STM32L0x1
@@ -126,7 +134,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC_Init-ADC-false-HAL-true,4-MX_RTC_Init-RTC-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC_Init-ADC-false-HAL-true,4-MX_RTC_Init-RTC-false-HAL-true,5-MX_LPUART1_UART_Init-LPUART1-false-HAL-true
 RCC.AHBCLKDivider=RCC_SYSCLK_DIV2
 RCC.AHBFreq_Value=8000000
 RCC.APB1Freq_Value=8000000
@@ -159,18 +167,19 @@ RCC.TimerFreq_Value=8000000
 RCC.USART2Freq_Value=8000000
 RCC.VCOOutputFreq_Value=48000000
 RCC.WatchDogFreq_Value=37000
-RTC.Alarm-Alarm\ A=RTC_ALARM_A
 RTC.AsynchPrediv=124
-RTC.IPParameters=Alarm-Alarm A,AsynchPrediv,SynchPrediv
+RTC.IPParameters=AsynchPrediv,SynchPrediv,WakeUpClock-WakeUp,WakeUpCounter-WakeUp
 RTC.SynchPrediv=295
+RTC.WakeUpClock-WakeUp=RTC_WAKEUPCLOCK_CK_SPRE_16BITS
+RTC.WakeUpCounter-WakeUp=60
 SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
-VP_RTC_VS_RTC_Alarm_A_Intern.Mode=Alarm A
-VP_RTC_VS_RTC_Alarm_A_Intern.Signal=RTC_VS_RTC_Alarm_A_Intern
 VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
 VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
+VP_RTC_VS_RTC_WakeUp_intern.Mode=WakeUp
+VP_RTC_VS_RTC_WakeUp_intern.Signal=RTC_VS_RTC_WakeUp_intern
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
