--- a/check_flujo/check_flujo.ioc
+++ b/check_flujo/check_flujo.ioc
@@ -18,7 +18,7 @@ Mcu.Pin0=PA0-CK_IN
 Mcu.Pin1=PA1
 Mcu.Pin10=VP_RTC_VS_RTC_Activate
 Mcu.Pin11=VP_RTC_VS_RTC_Calendar
-Mcu.Pin12=VP_RTC_VS_RTC_WakeUp_intern
+Mcu.Pin12=VP_RTC_VS_RTC_Alarm_A_Intern
 Mcu.Pin13=VP_SYS_VS_Systick
 Mcu.Pin2=PA2
 Mcu.Pin3=PA3
@@ -135,23 +135,22 @@ ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC_Init-ADC-false-HAL-true,4-MX_RTC_Init-RTC-false-HAL-true,5-MX_LPUART1_UART_Init-LPUART1-false-HAL-true
-RCC.AHBCLKDivider=RCC_SYSCLK_DIV2
-RCC.AHBFreq_Value=8000000
-RCC.APB1Freq_Value=8000000
-RCC.APB1TimFreq_Value=8000000
+RCC.AHBFreq_Value=16000000
+RCC.APB1Freq_Value=16000000
+RCC.APB1TimFreq_Value=16000000
 RCC.APB2CLKDivider=RCC_HCLK_DIV16
-RCC.APB2Freq_Value=500000
-RCC.APB2TimFreq_Value=1000000
-RCC.FCLKCortexFreq_Value=8000000
+RCC.APB2Freq_Value=1000000
+RCC.APB2TimFreq_Value=2000000
+RCC.FCLKCortexFreq_Value=16000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=8000000
+RCC.HCLKFreq_Value=16000000
 RCC.HSE_VALUE=8000000
 RCC.HSI16_VALUE=16000000
 RCC.HSI_VALUE=16000000
-RCC.I2C1Freq_Value=8000000
-RCC.IPParameters=AHBCLKDivider,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI16_VALUE,HSI_VALUE,I2C1Freq_Value,LPTIMFreq_Value,LPUARTFreq_Value,LSE_VALUE,LSI_VALUE,MCOPinFreq_Value,MSI_VALUE,PLLCLKFreq_Value,PWRFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIMFreq_Value,TimerFreq_Value,USART2Freq_Value,VCOOutputFreq_Value,WatchDogFreq_Value
-RCC.LPTIMFreq_Value=8000000
-RCC.LPUARTFreq_Value=8000000
+RCC.I2C1Freq_Value=16000000
+RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI16_VALUE,HSI_VALUE,I2C1Freq_Value,LPTIMFreq_Value,LPUARTFreq_Value,LSE_VALUE,LSI_VALUE,MCOPinFreq_Value,MSI_VALUE,PLLCLKFreq_Value,PWRFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIMFreq_Value,TimerFreq_Value,USART2Freq_Value,VCOOutputFreq_Value,WatchDogFreq_Value
+RCC.LPTIMFreq_Value=16000000
+RCC.LPUARTFreq_Value=16000000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=37000
 RCC.MCOPinFreq_Value=16000000
@@ -162,24 +161,25 @@ RCC.RTCFreq_Value=37000
 RCC.RTCHSEDivFreq_Value=4000000
 RCC.SYSCLKFreq_VALUE=16000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_HSI
-RCC.TIMFreq_Value=8000000
-RCC.TimerFreq_Value=8000000
-RCC.USART2Freq_Value=8000000
+RCC.TIMFreq_Value=16000000
+RCC.TimerFreq_Value=16000000
+RCC.USART2Freq_Value=16000000
 RCC.VCOOutputFreq_Value=48000000
 RCC.WatchDogFreq_Value=37000
+RTC.Alarm-Alarm\ A=RTC_ALARM_A
+RTC.AlarmMaskHours-Alarm\ A=RTC_ALARMMASK_HOURS
+RTC.AlarmMaskMinutes-Alarm\ A=
 RTC.AsynchPrediv=124
-RTC.IPParameters=AsynchPrediv,SynchPrediv,WakeUpClock-WakeUp,WakeUpCounter-WakeUp
+RTC.IPParameters=AsynchPrediv,SynchPrediv,Alarm-Alarm A,AlarmMaskMinutes-Alarm A,AlarmMaskHours-Alarm A
 RTC.SynchPrediv=295
-RTC.WakeUpClock-WakeUp=RTC_WAKEUPCLOCK_CK_SPRE_16BITS
-RTC.WakeUpCounter-WakeUp=60
 SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
+VP_RTC_VS_RTC_Alarm_A_Intern.Mode=Alarm A
+VP_RTC_VS_RTC_Alarm_A_Intern.Signal=RTC_VS_RTC_Alarm_A_Intern
 VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
 VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
-VP_RTC_VS_RTC_WakeUp_intern.Mode=WakeUp
-VP_RTC_VS_RTC_WakeUp_intern.Signal=RTC_VS_RTC_WakeUp_intern
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
