--- a/STM32L010C6/STM32L010C6.ioc
+++ b/STM32L010C6/STM32L010C6.ioc
@@ -1,25 +1,31 @@
 #MicroXplorer Configuration settings - do not modify
 File.Version=6
+I2C1.IPParameters=Timing
+I2C1.Timing=0x2000090E
 KeepUserPlacement=false
 LPUART1.BaudRate=9600
 LPUART1.IPParameters=BaudRate,WordLength
 LPUART1.WordLength=UART_WORDLENGTH_8B
 Mcu.Family=STM32L0
 Mcu.IP0=ADC
-Mcu.IP1=LPUART1
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=RTC
-Mcu.IP5=SYS
-Mcu.IPNb=6
+Mcu.IP1=I2C1
+Mcu.IP2=LPUART1
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=RTC
+Mcu.IP6=SYS
+Mcu.IPNb=7
 Mcu.Name=STM32L010C6Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC0
 Mcu.Pin1=PA0
-Mcu.Pin10=VP_RTC_VS_RTC_Activate
-Mcu.Pin11=VP_RTC_VS_RTC_Calendar
-Mcu.Pin12=VP_RTC_VS_RTC_Alarm_A_Intern
-Mcu.Pin13=VP_SYS_VS_Systick
+Mcu.Pin10=PA10
+Mcu.Pin11=PA13
+Mcu.Pin12=PA14
+Mcu.Pin13=VP_RTC_VS_RTC_Activate
+Mcu.Pin14=VP_RTC_VS_RTC_Calendar
+Mcu.Pin15=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin16=VP_SYS_VS_Systick
 Mcu.Pin2=PA1
 Mcu.Pin3=PA2
 Mcu.Pin4=PA3
@@ -27,8 +33,8 @@ Mcu.Pin5=PA4
 Mcu.Pin6=PA5
 Mcu.Pin7=PA6
 Mcu.Pin8=PA7
-Mcu.Pin9=PB14
-Mcu.PinsNb=14
+Mcu.Pin9=PA9
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L010C6Tx
@@ -53,6 +59,14 @@ PA1.GPIO_Label=BAT_MEAS_AN
 PA1.Locked=true
 PA1.Mode=IN1
 PA1.Signal=ADC_IN1
+PA10.Locked=true
+PA10.Mode=I2C
+PA10.Signal=I2C1_SDA
+PA13.Locked=true
+PA13.Mode=Serial_Wire
+PA13.Signal=SYS_SWDIO
+PA14.Mode=Serial_Wire
+PA14.Signal=SYS_SWCLK
 PA2.Locked=true
 PA2.Mode=Asynchronous
 PA2.Signal=LPUART1_TX
@@ -88,8 +102,9 @@ PA7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA7.Locked=true
 PA7.PinState=GPIO_PIN_RESET
 PA7.Signal=GPIO_Output
-PB14.Mode=Calibration_1Hz
-PB14.Signal=RTC_OUT_CALIB
+PA9.Locked=true
+PA9.Mode=I2C
+PA9.Signal=I2C1_SCL
 PC0.Locked=true
 PC0.Mode=Asynchronous
 PC0.Signal=LPUART1_RX
